using var builder to create variables

--- a/c/ext/Makefile
+++ b/c/ext/Makefile
@@ -110,15 +110,13 @@ dep:
 ../bld/./maddfilter.o: ../src/core/mstringfactory.h ../src/io/minputsource.h
 ../bld/./maddfilter.o: ../src/io/moutstream.h ../src/io/mstroutstream.h
 ../bld/./maddfilter.o: ../src/io/moutstream.h ../src/nodes/mfilter.h
-../bld/./maddfilter.o: ../src/nodes/mvar.h ../src/nodes/mfilterlibrary.h
-../bld/./maddfilter.o: ../src/nodes/mfilternode.h ../src/nodes/mfreetext.h
-../bld/./maddfilter.o: ../src/nodes/mnode.h ../src/nodes/mnode.h
-../bld/./maddfilter.o: ../src/nodes/mnodelist.h ../src/nodes/mtagnode.h
-../bld/./maddfilter.o: ../src/nodes/mvar.h ../src/nodes/mvariterator.h
-../bld/./maddfilter.o: ../src/nodes/mvarlibrary.h ../src/nodes/mvarnode.h
+../bld/./maddfilter.o: ../src/nodes/mvar.h ../src/nodes/mfilternode.h
+../bld/./maddfilter.o: ../src/nodes/mfreetext.h ../src/nodes/mnode.h
+../bld/./maddfilter.o: ../src/nodes/mnode.h ../src/nodes/mnodelist.h
+../bld/./maddfilter.o: ../src/nodes/mtagnode.h ../src/nodes/mvar.h
+../bld/./maddfilter.o: ../src/nodes/mvariterator.h ../src/nodes/mvarnode.h
 ../bld/./maddfilter.o: ../src/parser/mparser.h ../src/parser/mtokenizer.h
 ../bld/./maddfilter.o: ../src/parser/mtoken.h ../src/parser/mtagparser.h
-../bld/./maddfilter.o: ../src/parser/mtagparserlibrary.h
 ../bld/./maddfilter.o: ../src/parser/mtoken.h ../src/parser/mtokenizer.h
 ../bld/./maddfilter.o: ../src/parser/mtokenlists.h
 ../bld/./maddfilter.o: ../src/renderer/mrenderer.h
@@ -146,17 +144,15 @@ dep:
 ../bld/./mfortag.o: ../src/core/mstringfactory.h ../src/io/minputsource.h
 ../bld/./mfortag.o: ../src/io/moutstream.h ../src/io/mstroutstream.h
 ../bld/./mfortag.o: ../src/io/moutstream.h ../src/nodes/mfilter.h
-../bld/./mfortag.o: ../src/nodes/mvar.h ../src/nodes/mfilterlibrary.h
-../bld/./mfortag.o: ../src/nodes/mfilternode.h ../src/nodes/mfreetext.h
-../bld/./mfortag.o: ../src/nodes/mnode.h ../src/nodes/mnode.h
-../bld/./mfortag.o: ../src/nodes/mnodelist.h ../src/nodes/mtagnode.h
-../bld/./mfortag.o: ../src/nodes/mvar.h ../src/nodes/mvariterator.h
-../bld/./mfortag.o: ../src/nodes/mvarlibrary.h ../src/nodes/mvarnode.h
+../bld/./mfortag.o: ../src/nodes/mvar.h ../src/nodes/mfilternode.h
+../bld/./mfortag.o: ../src/nodes/mfreetext.h ../src/nodes/mnode.h
+../bld/./mfortag.o: ../src/nodes/mnode.h ../src/nodes/mnodelist.h
+../bld/./mfortag.o: ../src/nodes/mtagnode.h ../src/nodes/mvar.h
+../bld/./mfortag.o: ../src/nodes/mvariterator.h ../src/nodes/mvarnode.h
 ../bld/./mfortag.o: ../src/parser/mparser.h ../src/parser/mtokenizer.h
 ../bld/./mfortag.o: ../src/parser/mtoken.h ../src/parser/mtagparser.h
-../bld/./mfortag.o: ../src/parser/mtagparserlibrary.h ../src/parser/mtoken.h
-../bld/./mfortag.o: ../src/parser/mtokenizer.h ../src/parser/mtokenlists.h
-../bld/./mfortag.o: ../src/renderer/mrenderer.h
+../bld/./mfortag.o: ../src/parser/mtoken.h ../src/parser/mtokenizer.h
+../bld/./mfortag.o: ../src/parser/mtokenlists.h ../src/renderer/mrenderer.h
 ../bld/./mfortag.o: ../src/resolver/mtemplateloader.h
 ../bld/./mfortag.o: ../src/resolver/mtmplctx.h ../src/resolver/mvarresolver.h
 ../bld/./mfortag.o: ../src/utils/marraylist.h ../src/utils/mlist.h
